# ParallelZone

./: .buildinfo  .gitignore  CMakeLists.txt  Dockerfile  README.md  abbreviations.html  about.html  genindex.html  index.html  install.html  mpi_and_custom_types.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/Dockerfile/: base-cereal.Dockerfile  base-spdlog.Dockerfile  rebuild_base.txt
.github/workflows/: build_base.yaml  build_test_release-manual.yaml  build_test_release.yaml  c-cpp.yaml  deploy_docs.yaml  docker.yaml  docker_image_build.yaml  format.yaml  image-c-cpp.yaml  image-deploy_docs.yaml  image-test_docs.yaml  lint.yaml  merge.yaml  pull_request.yaml  run_tests_on_master.yaml  tag_and_release.yaml  test_docs.yaml
Docker/: ParallelZone.Dockerfile
Dockerfile/: base-catch2.Dockerfile  base-cereal.Dockerfile  base-madness.Dockerfile  base-spdlog.Dockerfile  build_tmp.Dockerfile  release.Dockerfile
_sources/: index.rst.txt  install.rst.txt
_sources/background/: abbreviations.rst.txt  about.rst.txt  index.rst.txt
_sources/developer/: index.rst.txt  repo_layout.rst.txt
_sources/user/: index.rst.txt  quick_reference.rst.txt  ram.rst.txt  resource_set.rst.txt  runtime_view.rst.txt
actions/container-build_test_release/: Dockerfile  action.yaml  entrypoint.sh
background/: abbreviations.html  about.html  index.html  mpi_primer.html
cmake/: FindCppyy.cmake  build_device.cmake  build_papi.cmake  get_cmaize.cmake  get_version_from_git.cmake  nwx_cxx_api_docs.cmake  nwx_pybind11.cmake  nwx_python_mods.cmake  python_utils.cmake
cxx_api/html/: _formulas.tex  binary__buffer_8ipp.html  binary__buffer_8ipp__dep__incl.map  binary__buffer_8ipp__dep__incl.md5  binary__buffer__pimpl_8hpp_source.html  binary__view_8hpp_source.html  binary__view_8ipp__incl.md5  classparallelzone_1_1LoggerFactory-members.html  classparallelzone_1_1LoggerFactory.html  classparallelzone_1_1detail___1_1FileSpdlog-members.html  classparallelzone_1_1detail___1_1FileSpdlog__coll__graph.map  classparallelzone_1_1detail___1_1LoggerPIMPL-members.html  classparallelzone_1_1detail___1_1LoggerPIMPL__inherit__graph.md5  classparallelzone_1_1detail___1_1SpdlogPIMPL-members.html  classparallelzone_1_1detail___1_1SpdlogPIMPL.html  classparallelzone_1_1detail___1_1StdoutSpdlog.html  classparallelzone_1_1detail___1_1StdoutSpdlog__inherit__graph.md5  classparallelzone_1_1hardware_1_1RAM-members.html  classparallelzone_1_1hardware_1_1RAM.html  classparallelzone_1_1mpi__helpers_1_1BinaryBuffer-members.html  classparallelzone_1_1mpi__helpers_1_1BinaryBuffer.html  classparallelzone_1_1mpi__helpers_1_1BinaryView__coll__graph.map  classparallelzone_1_1mpi__helpers_1_1CommPP-members.html  classparallelzone_1_1mpi__helpers_1_1CommPP.html  classparallelzone_1_1mpi__helpers_1_1ConstBinaryView-members.html  classparallelzone_1_1mpi__helpers_1_1ConstBinaryView__coll__graph.map  classparallelzone_1_1mpi__helpers_1_1detail___1_1BinaryBufferPIMPLBase.html  classparallelzone_1_1mpi__helpers_1_1detail___1_1BinaryBufferPIMPLBase__inherit__graph.map  classparallelzone_1_1mpi__helpers_1_1detail___1_1BinaryBufferPIMPLBase__inherit__graph.md5  classparallelzone_1_1mpi__helpers_1_1detail___1_1BinaryBufferPIMPL__inherit__graph.map  classparallelzone_1_1mpi__helpers_1_1detail___1_1BinaryViewBase-members.html  classparallelzone_1_1mpi__helpers_1_1detail___1_1BinaryViewBase.html  classparallelzone_1_1mpi__helpers_1_1detail___1_1CommPPPIMPL-members.html  classparallelzone_1_1mpi__helpers_1_1detail___1_1CommPPPIMPL.html  classparallelzone_1_1runtime_1_1ResourceSet-members.html  classparallelzone_1_1runtime_1_1ResourceSet.html  classparallelzone_1_1runtime_1_1RuntimeView.html  commpp_8hpp_source.html  commpp_8ipp.html  commpp_8ipp__dep__incl.map  (+74 more)
developer/: index.html  initialize_finalize.html  repo_layout.html
developer/design/: architecture.html  compp.html  hashing.html  index.html  logger.html  logging.html  mpi.html  parallel_runtime.html  parallel_zone.html  ram.html  reflection.html  resource_set.html  runtime_view.html  serialization.html
docs/: Makefile  README.md  requirements.txt
docs/source/: about.rst  (+7 more)
parallelzone_cxx_api/: Runtime_8hpp_source.html  _formulas.tex  _formulas_dark.tex  annotated.html  archive__wrapper_8hpp_source.html  argument__traits_8hpp_source.html  argument__wrapper_8hpp_source.html  binary__buffer_8hpp_source.html  binary__buffer_8ipp.html  binary__buffer_8ipp__dep__incl.map  binary__buffer_8ipp__dep__incl.md5  binary__buffer_8ipp_source.html  binary__buffer__pimpl_8hpp_source.html  binary__view_8hpp_source.html  binary__view_8ipp.html  binary__view_8ipp__dep__incl.map  binary__view_8ipp__dep__incl.md5  binary__view_8ipp__incl.map  binary__view_8ipp__incl.md5  binary__view_8ipp_source.html  classes.html  classparallelzone_1_1ArchiveWrapper-members.html  classparallelzone_1_1ArchiveWrapper.html  classparallelzone_1_1Logger-members.html  classparallelzone_1_1Logger.html  classparallelzone_1_1LoggerFactory-members.html  classparallelzone_1_1LoggerFactory.html  classparallelzone_1_1Runtime-members.html  classparallelzone_1_1Runtime.html  classparallelzone_1_1detail___1_1FileSpdlog-members.html  classparallelzone_1_1detail___1_1FileSpdlog.html  classparallelzone_1_1detail___1_1FileSpdlog__coll__graph.map  classparallelzone_1_1detail___1_1FileSpdlog__coll__graph.md5  classparallelzone_1_1detail___1_1FileSpdlog__inherit__graph.md5  classparallelzone_1_1detail___1_1LoggerPIMPL-members.html  classparallelzone_1_1detail___1_1LoggerPIMPL.html  classparallelzone_1_1detail___1_1LoggerPIMPL__inherit__graph.map  classparallelzone_1_1detail___1_1LoggerPIMPL__inherit__graph.md5  classparallelzone_1_1detail___1_1SpdlogPIMPL-members.html  classparallelzone_1_1detail___1_1SpdlogPIMPL.html  (+315 more)
runtime_cxx_api/: index.html
tests/: archive_wrapper.cpp  hasher.cpp  logger.cpp  main.cpp  resource_set.cpp  runtime.cpp  serialization.cpp  test_parallelzone.hpp
user/: index.html  mpi4py.html  mpi_and_custom_types.html  quick_reference.html  ram.html  resource_set.html  runtime_view.html
(+383 files in other folders)
